[gd_scene load_steps=3 format=3 uid="uid://v6ydoi2psips"]

[ext_resource type="Script" path="res://assets/scripts/ui/UnderlineButton.gd" id="1_np3kw"]
[ext_resource type="AudioStream" uid="uid://bqo4cdl7si5c1" path="res://assets/sounds/ui_click.wav" id="2_bgirt"]

[node name="RichTextLabel" type="RichTextLabel"]
offset_right = 57.0
offset_bottom = 27.0
size_flags_horizontal = 0
focus_mode = 2
bbcode_enabled = true
text = "Button"
fit_content_height = true
scroll_active = false
script = ExtResource("1_np3kw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bgirt")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
